--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -17,3 +17,10 @@
     %small= number_to_human_size(asset.asset.size)
     =link_to "Back", :back
 
+%h3 Comments
+#comments
+  - if @car.comments.exists?
+    = render @car.comments.select(&:persisted?)
+  - else
+    There are no comments for this car.
+= render "comments/form"
