--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -9,5 +9,7 @@
   = f.fields_for :assets do |asset|
     = asset.label :asset, "File ##{number += 1}"
     = asset.file_field :asset
+  =f.label :tag_names 
+  =f.text_field :tag_names
   =f.submit
 
