--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -10,8 +10,7 @@
   Brand:
   =@car.brand
 = simple_format(@car.model)
-#tags
-  = render @ticket.tags
+=render @car.tags
 %h3 Car's Picture
 .asset
   - @car.assets.each do |asset|
