test to delete tags

--- a/app/views/tags/_tag.html.haml
+++ b/app/views/tags/_tag.html.haml
@@ -1,2 +1,4 @@
 %span.tag
+  = link_to "x", remove_user_car_tag_path(@user, @car, tag), :method => :delete, :remote => true, :id => "delete-#{tag.name.parameterize}"
   = tag.name
+
