--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>ExamRails</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
- <nav>
-<ul>
-<li><%= link_to "Sign up", new_user_path %></li>
-<li><%= link_to "Sign in", signin_path %></li>
-</ul>
-</nav>
-<%= flash[:notice] = "car added" %>
+  <head>
+    <title>ExamRails</title>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <% if current_user == nil %>     
+          <li><%= link_to "Sign up", new_user_path %></li>
+          <li><%= link_to "Sign in", signin_path %></li>
+        <% else %>
+          <li><%= link_to "Sign Out", signout_path %></li>
+        <% end %>
+      </ul>
+    </nav>
+    <%= flash[:notice] = "car added" %>
+    <%= yield %>
 
-
-  <%= yield %>
-
-</body>
+  </body>
 </html>
