--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,8 +1,8 @@
 = form_for @user do |f|
   %h4 Name:
   =f.text_field :name
-  -#%h4 Last Name:
-  -#=f.text_field :last_name
+  %h4 Mail:
+  =f.text_field :mail
   -#%h4 Username
   -#=f.text_field :username
   %h4 Password
