--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
         <% end %>
       </ul>
     </nav>
-    <%= flash[:notice] = "car added" %>
+    <% if flash[:notice] %>
+      <%= flash[:notice] %>
+    <% end %>  
     <%= yield %>
 
   </body>
