--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,10 @@
   <body>
     <nav>
       <ul>
-        <% if current_user == nil %>     
-          <li><%= link_to "Sign up", new_user_path %></li>
-          <li><%= link_to "Sign in", signin_path %></li>
+        <% if current_user == nil%> 
+          <%= link_to('Login', new_user_session_path) %>
         <% else %>
-          <li><%= link_to "Sign Out", signout_path %></li>
+          <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
         <% end %>
       </ul>
     </nav>
