login failure by invalid credentials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,19 @@
       <ul>
         <% if current_user == nil%> 
           <%= link_to('Login', new_user_session_path) %>
-
           Or use <%= link_to image_tag("icons/twitter_32.png"), user_omniauth_authorize_path(:twitter), :id => "sign_in_with_twitter" %>
 
-        <% else %>
+      <% else %>
+        <%#Signed in as <%= current_user %>%>
           <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
         <% end %>
       </ul>
     </nav>
+<% flash.each do |key, value| %>
+<div class='flash' id='<%= key %>'>
+  <%= value %>
+ </div>
+<% end %>
     <% if flash[:notice] %>
       <%= flash[:notice] %>
     <% end %>  
