--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
         <% if current_user == nil%> 
           <%= link_to('Login', new_user_session_path) %>
           Or use <%= link_to image_tag("icons/twitter_32.png"), user_omniauth_authorize_path(:twitter), :id => "sign_in_with_twitter" %>
+          <%= link_to image_tag("icons/github_32.png"), user_omniauth_authorize_path(:github), :id => "sign_in_with_github" %>
+
 
       <% else %>
         <%#Signed in as <%= current_user %>%>
